desktop nav near completion

--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,27 @@
-body {
-  /*background-color: rgb(242,250,201);*/
-}
-
-  .navbar-header {
-    background-color: rgb(237,247,160);
-  }
   .navs {
     text-align: center;
   }
 
+  .container a:hover {
+    text-decoration: none;
+  }
 
   .header {
     font-weight: 800;
     text-align: center;
     font-family: 'Alex Brush', cursive;
+    width: 100%;
   }
   #headline {
     font-size: 7em;
+    margin-bottom: 0;
+    color: black;
   }
   #subline {
-    font-size: 3em;
+    font-size: 2.5em;
     color: rgb(2,151,156);
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
     padding: .2em 0;
+    margin-top: 0;
   }
 
   #myNav {
@@ -38,13 +36,46 @@ body {
     background-color: #fff;
 }
 
+.nav-pills {
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+}
 .navListItem {
   color: red;
   text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.15em;
+  letter-spacing: 0.05em;
 }
+#navigation li {
+  vertical-align: middle;
+  padding: 0;
+}
+#navigation li a:hover {
+  color: rgb(2,151,156);
+}
+
+.navbar-toggle {
+  background-color: rgb(2,151,156);
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+
 
 .picshar {
   margin: 0 auto;
+}
+
+
+
+
+@media screen and (min-width: 576px) {
+
+  #toggleName {
+    display: none;
+  }
+
 }
 
 /*********** Business Card colors ***************
