--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     text-align: center;
   }
 
-  .container a:hover {
+  body a:hover {
     text-decoration: none;
   }
 
@@ -67,8 +67,32 @@
   margin: 0 auto;
 }
 
+/*********** Footer ***************/
+
+#footer-name {
+  font-weight: 800;
+/*  text-align: center;*/
+  font-family: 'Alex Brush', cursive;
+  font-size: 3em;
+}
+#footer-title {
+  /*text-align: center;*/
+  font-family: 'Alex Brush', cursive;
+  font-size: 2em;
+}
 
 
+footer {
+  min-height: 6em;
+  background-color: rgb(71,71,71);
+  color: rgb(255,255,255);
+  text-align: center;
+/*  font-size: 2.5em;
+  font-weight: 800;
+  text-transform: uppercase;*/
+}
+
+/*************************************************/
 
 @media screen and (min-width: 576px) {
 
