--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-  .navs {
-    text-align: center;
-  }
-
   body a:hover {
     text-decoration: none;
   }
@@ -36,24 +32,40 @@
     background-color: #fff;
 }
 
-.nav-pills {
+#navigation {
   border-top: 3px solid black;
   border-bottom: 3px solid black;
 }
-.navListItem {
-  color: red;
+  .nav li {
+    vertical-align: middle;
+    padding: 0;
+  }
+  .nav li a:hover {
+    color: rgb(2,151,156);
+  }
+
+
+ul li a {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1.15em;
   letter-spacing: 0.05em;
 }
-#navigation li {
-  vertical-align: middle;
-  padding: 0;
+.navListItem {
+  color: red;
 }
-#navigation li a:hover {
+.footer-nav-li {
   color: rgb(2,151,156);
 }
+.credits {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.15em;
+  letter-spacing: 0.05em;
+  margin-top: 10px;
+}
+
+
 
 .navbar-toggle {
   background-color: rgb(2,151,156);
@@ -80,13 +92,19 @@
   font-family: 'Alex Brush', cursive;
   font-size: 2em;
 }
+#footer-navigation {
+  border-top: 1.5px solid #ddd;
+  border-bottom: 1.5px solid #ddd;
+}
+
 
 
 footer {
-  min-height: 6em;
+  min-height: 7em;
   background-color: rgb(71,71,71);
   color: rgb(255,255,255);
   text-align: center;
+  padding: 20px 0 50px 0;
 /*  font-size: 2.5em;
   font-weight: 800;
   text-transform: uppercase;*/
