--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body a:hover {
 }
 #subline {
   font-size: 2.5em;
-  color: #00d089;
+  color: rgb(2,151,156);
   padding: .2em 0;
   margin-top: 0;
 }
@@ -83,7 +83,7 @@ ul li a {
 
 footer {
   min-height: 7em;
-  background-color: #00d089;
+  background-color: rgb(71,71,71);
   color: rgb(255,255,255);
   text-align: center;
   padding: 20px 0 50px 0;
@@ -104,7 +104,7 @@ footer {
 }
 
 .footer-nav-li {
-  color: rgb(228,85,77);
+  color: rgb(2,151,156);
 }
 
 .credits {
