--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body a:hover {
   padding-right: 0;
 }
 
-
 /**************** Header **************************/
 .header {
   font-weight: 800;
@@ -16,7 +15,7 @@ body a:hover {
   width: 100%;
 }
 #headline {
-  font-size: 7em;
+  font-size: 6em;
   margin-bottom: 0;
   color: black;
 }
@@ -72,12 +71,12 @@ ul li a {
   background-color: #fff;
 }
 
-
 .picshar {
   margin: 0 auto;
 }
 
 /**************** End Navigation *********************/
+
 
 /******************* Footer **************************/
 
@@ -198,14 +197,44 @@ Back pot:
 
 
 /***************** Home Page About************************/
+#about-row {
+  margin: 5% auto;
+  text-align: center;
+}
+
+.standout-text {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+#client-sig {
+  font-family: 'Alex Brush', cursive;
+  font-size: 2em;
+  color: #333;
+}
+ .body-text {
+  font-size: 1.125em;
+  line-height: 1.7em;
+  margin-top: 10px;
+  width: 92%;
+  text-rendering: optimizeLegibility;
+}
+
+#lets-talk {
+  background-color: rgb(2,151,156);
+  color: #fff;
+  padding-bottom: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
 .btn-primary {
-  font-size: 3rem;
+  font-size: 2.75rem;
   background-color: rgb(228,85,77);
   border-color: rgb(200,85,77);
   text-transform: uppercase;
   letter-spacing: .1rem;
   font-weight: bold;
-  padding: 1rem 3rem;
+  padding: 1rem 2.75rem;
 
   transition: background-color 300ms ease-out;
     transition-property: background-color;
