Slides images and some links

--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,14 @@ Back pot:
 }
 /*--ends-contact--*/
 
+/*SLIDES TEXT COLOR*/
+.carousel-caption {
+  color: #000000;
+}
+#textcolor {
+  color: #FFFFFF;
+}
+
 
 
 
