edits to contact

--- a/css/style.css
+++ b/css/style.css
@@ -221,14 +221,13 @@ Back pot:
   margin-bottom: 8em;
 }
 .content_middle_bottom {
-  padding: 8em 0 0 0;
+  margin: 4em 0;
 }
 .tz-title-3 {
   display: block;
   color: #A7A9AC;
   font-size: 35px;
   font-weight: 400;
-  line-height: 24px;
   margin: 0;
   padding: 24px 0;
   position: relative;
@@ -993,7 +992,19 @@ Back pot:
 /*  opacity: .7;*/
 }
 
-
+#formButton {
+  font-size: 2rem;
+  background-color: rgb(228,85,77);
+  border-color: rgb(200,85,77);
+  letter-spacing: .1rem;
+  padding: 1rem 2.75rem;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+#formButton:hover {
+  background-color: rgb(200,85,77);
+  border-color: rgb(200,85,77);
+}
 /***************** Home Page About************************/
 
 
