--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body a:hover {
 }
 
 p {
-  font-size: 1.25em;
+  font-size: 1.1em;
 }
 
 .container-fluid {
@@ -1014,6 +1014,12 @@ Back pot:
   min-width: 200px;
   max-width: 200px;
 }
+#sheila-pic-about {
+  min-width: 200px;
+  max-width: 275px;
+  margin-bottom: 10px;
+  margin-top: 90px;
+}
 
 .about-sig {
   border-top: 2px solid rgb(71,71,71);
@@ -1025,12 +1031,28 @@ Back pot:
   font-size: 2.25em;
   color: #333;
 }
+#about-text {
+}
 
 
 @media screen and (max-width: 767px) {
 
   #about-sig {
     margin-top: 20px;
+  }
+  #sheila-pic-about {
+  min-width: 200px;
+  max-width: 275px;
+  margin-top: 0px;
+  }
+
+}
+
+@media screen and (max-width: 859px) {
+
+  #sheila-pic-about {
+  min-width: 200px;
+  max-width: 250px;
   }
 
 }
